src/objects/Partner_Commission_Invoice_Transaction__c.object
<CustomObject>
    <description>The junction object between Partner Commission Summaries and Invoice Transactions

For BAP-3698 - Partner Commissions v2</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>Invoice_Transaction__r.Store_Opportunity__r.Account.Name</formula>
        <inlineHelpText>Name of the Account related to the payment</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrued_Transaction_Amount__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total recognizable revenue from a transaction that will be applied to this commission</inlineHelpText>
        <label>Accrued Transaction Amount (CMRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>Invoice_Transaction__r.Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount the customer paid toward their invoice</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Transaction__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The transaction that this partner commission is for.</inlineHelpText>
        <label>Invoice Transaction</label>
        <referenceTo>Invoice_Transaction__c</referenceTo>
        <relationshipName>Partner_Commission_Account_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The Partner Account that this record will be paid out to.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>rvpe__RVAccount__c</referenceTo>
        <relationshipName>Partner_Commission_Account_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Earned__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The commission payout amount based on the transaction amount and the commission %</inlineHelpText>
        <label>Partner Commission Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Percent__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The bounty percentage that the partner was receiving when this transaction was recorded</inlineHelpText>
        <label>Partner Commission %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Summary__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The partner commission summary that this detail record rolls up to</inlineHelpText>
        <label>Partner Commission Summary</label>
        <referenceTo>Partner_Commission_Summary__c</referenceTo>
        <relationshipName>Partner_Commission_Account_Transaction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>Invoice_Transaction__r.Date_Paid__c</formula>
        <inlineHelpText>The date that the customer paid their invoice</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>Invoice_Transaction__r.Payment_Term_Calculated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of months that the customer paid towards</inlineHelpText>
        <label>Payment Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_Plan__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>Invoice_Transaction__r.Store_Opportunity__r.Product__c</formula>
        <inlineHelpText>The store&apos;s current plan</inlineHelpText>
        <label>Store Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_URL__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>Invoice_Transaction__r.Store_Opportunity__r.StoreURL__c</formula>
        <inlineHelpText>The related store&apos;s URL</inlineHelpText>
        <label>Store URL</label>
        <type>Text</type>
    </fields>
    <label>Partner Commission / Invoice Transaction</label>
    <nameField>
        <displayFormat>PCIT-{000000000}</displayFormat>
        <label>PC/IT Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commission / Invoice Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>